Reworked the GetKinds endpoint
